--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "typescript": "^5"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && bun build src/index.ts --target browser --format iife --outfile lib/sdk.js",
     "dev": "tsc --watch"
   }
 }
