--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "waheim-haptics",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Haptic feedback for web applications using the Vibration API",
   "main": "lib/index.js",
   "module": "lib/index.js",
@@ -26,7 +26,7 @@
     "typescript": "^5"
   },
   "scripts": {
-    "build": "tsc && bun build src/index.ts --target browser --format iife --outfile lib/sdk.js",
+    "build": "tsc && bun build src/index.ts --target browser --format iife --outfile lib/core.js | head -1",
     "dev": "tsc --watch"
   }
 }
