--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,10 @@
     "moduleResolution": "bundler",
     "verbatimModuleSyntax": true,
     "noEmit": false,
-    "outDir": "lib",
+    "outDir": "dist",
+    "sourceMap": true,
     "declaration": true,
+    "declarationMap": true,
 
     // Best practices
     "strict": true,
